
[project]
name = "vectorboard"
version = "0.0.1"
description = "Hyperparameter optimisation for your LLM Emebddings."
keywords = ["hyperparameter", "optimisation", "embeddings", "machine learning", "vectorboard", "langchain", "llama_index", "llm", "finetune"]


authors = [
  { name="Hamed Mohammadpour", email="hamed@vectorboard.ai" },
]

readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">=3.8, <4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://vectorboard.ai"
"Bug Tracker" = "https://github.com/vectorboard/"


[tool.black]
line-length = 90
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.direnv
    | \.eggs
    | \.git
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | venv
  )/
)
'''
[tool.poetry]
name = "vectorboard"
packages = [
    { include = "vectorboard", from = "src" },
]
version = "0.0.1"
description = "Hyperparameter optimisation for your LLM Emebddings."
authors = ["Hamed Mohammadpour <HamedMP@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3"
gradio = "^3.4"
matplotlib = "^3.4"
langchain = "^0.0.300"
rich = "^13.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
